--- a/bower.json
+++ b/bower.json
@@ -24,5 +24,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "react": "~0.12.2",
+    "crossfilter": "~1.3.11"
+  }
 }
