--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "authors": [
     "Adam Timberlake <adam.timberlake@gmail.com>"
   ],
-  "description": "Crossfilter.js implemented as a React.js mixin for ultra-fast filtering and sorting techniques.",
+  "description": "Crossfilter.js implemented as a mixin for ultra-fast filtering and sorting techniques baked into React.js components.",
   "main": "dist/react-crossfilter.min.js",
   "keywords": [
     "crossfilter",
