--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-crossfilter",
   "version": "0.1.0",
-  "description": "Crossfilter.js implemented as a React.js mixin for ultra-fast filtering and sorting techniques.",
+  "description": "Crossfilter.js implemented as a mixin for ultra-fast filtering and sorting techniques baked into React.js components.",
   "main": "dist/react-crossfilter.min.js",
   "scripts": {
     "test": "gulp test"
