--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
   },
   "homepage": "https://github.com/Wildhoney/ReactCrossfilter",
   "devDependencies": {
-    "express": "^4.12.1"
+    "express": "^4.12.1",
+    "htmltidy": "0.0.6",
+    "request": "^2.53.0",
+    "user-agents": "0.0.2",
+    "xmldom": "^0.1.19",
+    "xpath": "0.0.9"
   }
 }
