--- a/bower.json
+++ b/bower.json
@@ -25,8 +25,11 @@
     "test",
     "tests"
   ],
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "fetch": "~0.7.0",
     "react": "~0.12.2",
-    "crossfilter": "~1.3.11"
+    "crossfilter": "~1.3.11",
+    "es6-promise": "~2.0.1"
   }
 }
