--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
   "homepage": "https://github.com/Wildhoney/ReactCrossfilter",
   "devDependencies": {
     "express": "^4.12.1",
-    "htmltidy": "0.0.6",
+    "gulp": "^3.8.11",
+    "gulp-jshint": "^1.9.2",
+    "gulp-karma": "0.0.4",
+    "gulp-rename": "^1.2.0",
+    "gulp-uglify": "^1.1.0",
+    "karma": "^0.12.31",
     "request": "^2.53.0",
     "user-agents": "0.0.2",
     "xmldom": "^0.1.19",
